--- a/src/output.css
+++ b/src/output.css
@@ -754,6 +754,20 @@ video {
   animation: slideIn 0.4s ease-in-out forwards;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.4s ease-in-out forwards;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
